style.css
/* ... */
button{
    cursor: pointer;
}

img{
    max-width: 100%;
    height: auto;
}

/*@@@@@@@@@@@@@@@@@ Navbar @@@@@@@@@@@@@@@@*/

.navbar2 {
    position:relative;
    z-index: 1002;


    width: 100%;
    
    padding: 20px 120px;
    gap: 10px;
    
}

.navbar2 .nav-container {
    display: flex;
    justify-content: space-between;
    
}

.navbar2 .nav-mid-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 35px;

    z-index: 1001;
}

.nav-mid-content li {
    list-style: none;
    font-family: "Barlow",sans-serif;
    font-size: 18px;
    line-height: 150%;
    letter-spacing: 0.15px;
    cursor: pointer;
    

    color: #262626;
}

.desktop-btn {
    display: block;
}

.mobile-contact{
    display: none;
}


.navbar2 .nav-contactus-btn {
    /* max-width: 144px; */
    border: none;
    max-height: 52px;
    border-radius: 8px;
    padding: 18px 24px;
    background-color: #1E72BE;
    font-weight: 400;
    font-size: 20px;
    line-height: 16px;
    cursor: pointer;
    letter-spacing: 0px;
    color: #ffffff;
    text-align: center;
}

.navbar2 .nav-contactus-btn:hover{
    background-color: #4FC5F2;
}

/* HAMBURGER */

.hamburger {
    display: none;
    flex-direction: column;
    gap: 5px;
    cursor: pointer;

    position: relative;   /* 👈 ADD THIS */
    z-index: 1004;        /* 👈 ADD THIS */
}

.hamburger span {
    width: 25px;
    height: 3px;
    background: #000;
    transition: 0.3s;
}









/*@@@@@@@@@@@@ Carousel from here @@@@@@@@@@@@@@@@@@@22 */

.slide .carousel-inner .carousel-item video{
    width: 100%;
    /* height: calc(100vh - 110px); */
    height: 100vh;
    object-fit: cover;
}

.slide .carousel-inner .carousel-item{
    width: 100%;
    position: relative;
}

.carousel-context-box{ 
    width: 90%;

    padding: 0 20px;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);

    max-width: 1064px;
    color: white;
    text-align: center;
    z-index: 2;
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 30px;
}

.carousel-context-box h2{
    font-family: "Sora", sans-serif;
    font-weight: 700;
    font-style: Bold;
    font-size: 60px;
    line-height: 120%;
    letter-spacing: -0.5px;
}

.carousel-context-box p{
    max-width: 839px;
    font-family: "Barlow" , sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 150%;
    letter-spacing: 0.15px;
    
}
.carousel-context-box button{
    font-family: "Barlow",sans-serif;
    font-weight: 400;
    font-size: 20px;

    max-width: 174px;
    max-height: 52px;
    border-radius: 8px;
    border: 1px solid #ffffff;
    padding: 10px;

    text-align: center;
    color: #ffffff;
    background-color: transparent;

    display: flex;
    flex-direction: row;
    gap: 12px;
}

.carousel-context-box button:hover{
    background-color: #4FC5F2;

    border: none;

}

.carousel-context-box button img{
    transition: transform 0.5s ease;
}

.carousel-context-box button:hover img{
    transform: rotate(44deg);
}

.carousel-counter{
    position: absolute;
    top: 90%;
    left: 10%;

    color: #ffffff;
    font-family: "Barlow", sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 150%;
    letter-spacing: 0.15px;
    z-index: 5;
}



.carousel-buttons-wrapper{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 24px;
  
    /* max-width: 50px; */
    position: absolute;
    left: 87%;
    top: 90%;
}

.carousel-buttons-wrapper .next-button-container{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}




.carousel-buttons-wrapper .carousel-control-prev{
    /* background-color: red; */
    width: 30px;
    height: 30px;
    position: static;
    
    
}

.carousel-buttons-wrapper .carousel-control-next{
    /* background-color: springgreen; */
    width: 30px;
    height: 30px;
    position: static;
 
}

.carousel-control-prev-icon {
    background-image: url(assets/images/Prev_Arrow.svg);

    width: 18px;
    height: 20px;
}

.carousel-control-next-icon {
    background-image: url(assets/images/Next_Arrow.svg);

    max-width: 18px;
    max-height: 20px;

    position: relative;
    z-index: 2;

}


/* css for that progress on next-icon */

.progress-btn{
    position: relative;
    width: 50px;
    height: 50px;
    background: transparent;
    border: none;

    display: flex;
    align-items: center;
    justify-content: center;
}

.progress-ring{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(-90deg);

    pointer-events: none;
}

.progress-bg{
    fill: none;
    stroke: rgba(255,255,255,0.2);
    stroke-width: 3;
}

.progress-bar{
    fill: none;
    stroke: #4FC5F2; /* blue color */
    stroke-width: 3;
    stroke-linecap: round;

    stroke-dasharray: 126;  /* full circle */
    stroke-dashoffset: 126; /* start empty */

    transition: stroke-dashoffset 0.5s ease;
}






/*@@@@@@@@@@@@@@@  Revolutionary wla  @@@@@@@@@ */
.revolutionary-laser {
    margin: auto;
    display: flex;
    width: 100%;
    
    /* max-width: 1600px; */
    /* max-width: 1900px; */

    margin: 0 auto;

    flex-direction: column;
    padding: 80px 160px;
    gap: 80px;
}

.top {
    width: 100%;
    display: flex;
    justify-content: space-between;
    gap: 153px;
    align-items: center;
   
}

.revolutionary-laser-left{
    width: 60%;
    
}
.revolutionary-laser-right {

    width: 40%;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.revolutionary-laser-left h1 {
    font-family: "Sora",sans-serif;
    font-weight: 700;
    
    font-size: 60px;
    line-height: 120%;
    letter-spacing: -0.5px;
    width: 100%;
    /* text-align: center; */
}
/* ... */

